# flake8-plugin-cookiecutter

./: README.md  cookiecutter.json  example.json
.github/workflows/: pythonapp.yml  pythonpackage.yml
tests/: requirements.txt  test_bake.py
{{ cookiecutter.project_name }}/: .bumpversion.cfg  README.md  makefile  pyproject.toml  setup.cfg
{{ cookiecutter.project_name }}/.github/workflows/: pythonpackage.yml  pythonpublish.yml
{{ cookiecutter.project_name }}/tests/: test_plugin.py  test_visitor.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: errors.py  plugin.py  visitor.py
