[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"
homepage = "https://pypi.org/project/{{cookiecutter.project_name}}"
keywords = []

[tool.poetry.plugins."flake8.extension"]
{{cookiecutter.error_prefix}} = '{{cookiecutter.project_slug}}.plugin:{{cookiecutter.plugin_name}}Plugin'

[tool.poetry.dependencies]
python = "^3.6"
flake8-plugin-utils = "*"

[tool.poetry.dev-dependencies]
black = {version = "*",allow-prereleases = true}
bumpversion = "*"
flake8-awesome = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-mock = "*"
unify = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"